a ver si ahora si

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: rgb(37, 46, 57);">
   <head>
     <meta charset="utf-8">
     <title>Abstracta - Docker </title>
