--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Abstracta - Docker </title>
     <meta name="viewport" content="width=device-width">
   </head>
-  <body>
+  <body style ="background-color: rgb(37, 46, 57) !important;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
